fixed scrollbar shit

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -14,52 +14,41 @@ body {
     margin:0px;
     padding:0px;
     text-transform:uppercase;
-    width:100%;
 }
 
-/* Portrait layout (default) */
 .app {
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:45%; 
-	height: 30px;
-    width: 225px;                   /* text area width */
-    text-align:center;
+	position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .loadingScreen{
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-	height: 100%;
+    background: url(../img/logo.png) no-repeat center top;
+    height: 235px;
     width: 100%;
-    position: absolute;
-	color: #FFFFFF;
-	font-size: 30px;
+    position: relative;
+    color: #FFFFFF;
+    font-size: 30px;
     letter-spacing: 2px;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+    margin-top: 45%;
 }
 
 .loadingScreen > .text{
-    position: absolute;
-    margin-left: 14%;
-    margin-top: 92%;
-    left: 0;
-    top: 0;
+	position: relative;
+    left: 28%;
+    top: 87%;
 }
 
 .potOverview{
-	margin: 0;
-	padding: 0; 
-	color: #FFFFFF;
-	font-size: 20px;
+    width: 100%;
+    position: relative;
+    color: #FFFFFF;
+    font-size: 16px;
+    letter-spacing: 2px;
 }
 
 .potOverview > .text{
-    position: absolute;
-    right: 20%;
-    top: 0;
-    text-align: center;
+	position: relative;
 }
 
 h1 {
